Added selection sort to webpage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body>
         <a href="bubble sort/index.html">Bubble Sort</a>
         <a href="insertion sort/index.html">Insertion Sort</a>
-
+        <a href="selection sort/index.html">Selection Sort</a>
     </body>
 </html>
