Added Bogo Sort to Main Screen

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <a href="bubble sort/index.html">Bubble Sort</a>
         <a href="insertion sort/index.html">Insertion Sort</a>
         <a href="selection sort/index.html">Selection Sort</a>
+        <a href="bogosort/index.html">Bogo Sort</a>
     </body>
 </html>
